[package]
name = "spider"
version = "0.1.0"
authors = ["james"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.4", features = ["json", "blocking"]}
select = "0.4.3"
rayon = { version = "*" }